fix: truncate text email and add smooth scrool

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,9 @@ body {
   * {
     @apply border-border;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     @apply bg-background text-foreground;
   }
